Add html structure

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,1 +1,29 @@
-<footer class="page__footer"></footer>
+<footer class="footer">
+  <nav class="footer__menu">
+    <ul>
+      <li>Lorem ipsum</li>
+      <div class="verticalLine"></div>
+      <li>Lorem ipsum</li>
+      <div class="verticalLine"></div>
+      <li>Lorem ipsum</li>
+      <div class="verticalLine"></div>
+      <li>Lorem ipsum</li>
+      <div class="verticalLine"></div>
+      <li>Lorem ipsum</li>
+      <div class="verticalLine"></div>
+      <li>Lorem ipsum</li>
+      <div class="verticalLine"></div>
+      <li>Lorem ipsum</li>
+    </ul>
+  </nav>
+  <figure class="footer__logo">
+    <a href="https://www.hiberus.com/" target="_blank">
+      <img
+        class="footer__logo--img"
+        src="./assets/images/logo-bg.jpg"
+        alt="Hiberus logo"
+        title="Go to Hiberus website"
+      />
+    </a>
+  </figure>
+</footer>
