--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,1 +1,12 @@
-<header class="page__header"></header>
+<header class="header">
+  <figure class="header__logo">
+    <a href="https://www.hiberus.com/" target="_blank">
+      <img
+        class="header__logo--img"
+        src="./assets/images/logo.png"
+        alt="Hiberus logo"
+        title="Go to Hiberus website"
+      />
+    </a>
+  </figure>
+</header>
