--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,1 +1,25 @@
-<main class="page__main">Hiberus</main>
+<main class="main">
+  <section class="main__hero">
+    <img src="./assets/images/hiberus-foto.jpeg" alt="Hiberus building" />
+  </section>
+  <section class="main__articles">
+    <include
+      src="./articles.html"
+      imageSrc="./assets/images/article1.jpg"
+      text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nobis voluptatum expedita, magni nesciunt autem neque officia non a soluta vel officiis dignissimos ea laudantium labore harum unde qui. Ipsa Lorem, ipsum dolor sit amet consectetur adipisicing elit. "
+    >
+    </include>
+    <include
+      src="./articles.html"
+      imageSrc="./assets/images/article2.jpg"
+      text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nobis voluptatum expedita, magni nesciunt autem neque officia non a soluta vel officiis dignissimos ea laudantium labore harum unde qui. Ipsa Lorem, ipsum dolor sit amet consectetur adipisicing elit. "
+    >
+    </include>
+    <include
+      src="./articles.html"
+      imageSrc="./assets/images/article3.jpg"
+      text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nobis voluptatum expedita, magni nesciunt autem neque officia non a soluta vel officiis dignissimos ea laudantium labore harum unde qui. Ipsa Lorem, ipsum dolor sit amet consectetur adipisicing elit. "
+    >
+    </include>
+  </section>
+</main>
