--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,3 +4,7 @@
 @import "layout/header";
 @import "layout/footer";
 @import "pages/index";
+@font-face {
+  font-family: "Roboto", sans-serif;
+  src: url("../src/fonts/Roboto-Bold.ttf");
+}
