--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1,1 +1,1 @@
-*{box-sizing:border-box;margin:0;padding:0}
+*{box-sizing:border-box;margin:0;padding:0;font-family:"Roboto", sans-serif}.page__header{font-size:72px}@font-face{font-family:"Roboto", sans-serif;src:url("../src/fonts/Roboto-Bold.ttf")}
