Add more variables and function

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,3 +1,9 @@
-$color-background-medium: #0271bc;
+$defaultFontSize: 16;
+
+//Colours
+$colorBgMain: #091549;
+$colorSec: #ffffff;
+$colorFont: #1d1d20;
+//breakpoints
 $tablet: 768px;
 $desktop: 1280px;
