--- a/src/scss/core/_reset.scss
+++ b/src/scss/core/_reset.scss
@@ -3,4 +3,7 @@
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
+  color: $colorFont;
+  list-style-type: none;
+  scroll-behavior: smooth;
 }
