--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,3 +1,16 @@
-.page__header {
-  font-size: 72px;
+.header {
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  z-index: 1000;
+  background-color: $colorSec;
+  display: flex;
+  &__logo {
+    margin: 2px;
+    align-items: center;
+    &--img {
+      width: 100px;
+      height: 20px;
+    }
+  }
 }
