--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,16 +1,18 @@
 .header {
   width: 100%;
-  height: 50px;
+  height: rem(60);
   position: fixed;
   z-index: 1000;
   background-color: $colorSec;
   display: flex;
+  box-shadow: rem(0) rem(0) rem(5) rem(5) rgba(0, 0, 0, 0.205);
   &__logo {
-    margin: 2px;
+    padding-top: rem(7);
+    display: flex;
     align-items: center;
     &--img {
-      width: 100px;
-      height: 20px;
+      margin: rem(20);
+      height: rem(35);
     }
   }
 }
