Add main section styles and fix header styles

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,24 +1,28 @@
 <main class="main">
   <section class="main__hero">
-    <img src="./assets/images/hiberus-foto.jpeg" alt="Hiberus building" />
+    <img
+      class="main__hero--img"
+      src="./assets/images/hiberus-foto.jpeg"
+      alt="Hiberus building"
+    />
   </section>
   <section class="main__articles">
     <include
       src="./articles.html"
       imageSrc="./assets/images/article1.jpg"
-      text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nobis voluptatum expedita, magni nesciunt autem neque officia non a soluta vel officiis dignissimos ea laudantium labore harum unde qui. Ipsa Lorem, ipsum dolor sit amet consectetur adipisicing elit. "
+      text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nobis voluptatum expedita, magni nesciunt autem neque officia non a soluta vel officiis dignissimos ea laudantium labore harum unde qui. Ipsa Lorem, ipsum dolor sit amet consectetur adipisicing."
     >
     </include>
     <include
       src="./articles.html"
       imageSrc="./assets/images/article2.jpg"
-      text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nobis voluptatum expedita, magni nesciunt autem neque officia non a soluta vel officiis dignissimos ea laudantium labore harum unde qui. Ipsa Lorem, ipsum dolor sit amet consectetur adipisicing elit. "
+      text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nobis voluptatum expedita, magni nesciunt autem neque officia non a soluta vel officiis dignissimos ea laudantium labore harum unde qui. Ipsa Lorem, ipsum dolor sit amet consectetur adipisicing."
     >
     </include>
     <include
       src="./articles.html"
       imageSrc="./assets/images/article3.jpg"
-      text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nobis voluptatum expedita, magni nesciunt autem neque officia non a soluta vel officiis dignissimos ea laudantium labore harum unde qui. Ipsa Lorem, ipsum dolor sit amet consectetur adipisicing elit. "
+      text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nobis voluptatum expedita, magni nesciunt autem neque officia non a soluta vel officiis dignissimos ea laudantium labore harum unde qui. Ipsa Lorem, ipsum dolor sit amet consectetur adipisicing."
     >
     </include>
   </section>
