--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @import "core/mixins";
 @import "layout/page";
 @import "layout/header";
+@import "layout/mainContent";
 @import "layout/footer";
 @import "pages/index";
 @font-face {
