--- a/src/html/partials/articles.html
+++ b/src/html/partials/articles.html
@@ -1,4 +1,4 @@
-<article class="article">
-  <img class="article__img" src="@@imageSrc" alt="@@imageAlt" />
-  <p class="article__paragraph">@@text</p>
+<article class="main__article">
+  <img class="main__article--img" src="@@imageSrc" alt="@@imageAlt" />
+  <p class="main__article--text">@@text</p>
 </article>
