Add footer styles and make some changes on main section

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
-  <nav class="footer__menu">
-    <ul>
+  <nav>
+    <ul class="footer__menu">
       <li>Lorem ipsum</li>
       <div class="verticalLine"></div>
       <li>Lorem ipsum</li>
@@ -20,7 +20,7 @@
     <a href="https://www.hiberus.com/" target="_blank">
       <img
         class="footer__logo--img"
-        src="./assets/images/logo-bg.jpg"
+        src="./assets/images/logo.png"
         alt="Hiberus logo"
         title="Go to Hiberus website"
       />
