--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,7 +1,7 @@
 $defaultFontSize: 16;
 
 //Colours
-$colorBgMain: #091549;
+$colorBgMain: #2f4464;
 $colorSec: #ffffff;
 $colorFont: #1d1d20;
 //breakpoints
