--- a/src/scss/layout/_mainContent.scss
+++ b/src/scss/layout/_mainContent.scss
@@ -1,13 +1,13 @@
 .main {
   width: 100%;
-  position: relative;
-  top: rem(60);
-
+  margin-top: rem(60);
   &__hero {
     margin: rem(20) 0 rem(10) 0;
+    border: rem(10) solid $colorSec;
+    // background-color: $colorSec;
     &--img {
       width: 100%;
-      height: rem(250);
+      max-height: rem(500);
     }
   }
   &__articles {
@@ -16,12 +16,15 @@
   }
   &__article {
     background-color: $colorSec;
-    margin: rem(5) rem(10) rem(5) rem(10);
-    padding: rem(5) rem(10) rem(5) rem(10);
+    margin: rem(10) rem(20);
+    padding: rem(20);
+    box-shadow: rem(0) rem(3) rem(5) rem(3) rgba(0, 0, 0, 0.205);
     &--img {
       width: 100%;
     }
-    &-text {
+    &--text {
+      padding-top: rem(10);
+      font-size: rem(14);
     }
   }
 }
