--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,7 +7,7 @@
 @import "layout/mainContent";
 @import "layout/footer";
 @import "pages/index";
-@font-face {
-  font-family: "Roboto", sans-serif;
-  src: url("../src/fonts/Roboto-Bold.ttf");
-}
+// @font-face {
+//   font-family: "Roboto", sans-serif;
+//   src: url("../src/fonts/Roboto-Bold.ttf");
+// }
