Change hero image

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -2,7 +2,7 @@
   <section class="main__hero">
     <img
       class="main__hero--img"
-      src="./assets/images/hiberus-foto.jpeg"
+      src="./assets/images/hiberus-building.jpg"
       alt="Hiberus building"
     />
   </section>
