Add responsive design for tablet

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,19 +1,13 @@
 <footer class="footer">
   <nav>
     <ul class="footer__menu">
-      <li>Lorem ipsum</li>
-      <div class="verticalLine"></div>
-      <li>Lorem ipsum</li>
-      <div class="verticalLine"></div>
-      <li>Lorem ipsum</li>
-      <div class="verticalLine"></div>
-      <li>Lorem ipsum</li>
-      <div class="verticalLine"></div>
-      <li>Lorem ipsum</li>
-      <div class="verticalLine"></div>
-      <li>Lorem ipsum</li>
-      <div class="verticalLine"></div>
-      <li>Lorem ipsum</li>
+      <li class="footer__menu--option1">Lorem ipsum</li>
+      <li class="footer__menu--option">Lorem ipsum</li>
+      <li class="footer__menu--option">Lorem ipsum</li>
+      <li class="footer__menu--option">Lorem ipsum</li>
+      <li class="footer__menu--option">Lorem ipsum</li>
+      <li class="footer__menu--option">Lorem ipsum</li>
+      <li class="footer__menu--option">Lorem ipsum</li>
     </ul>
   </nav>
   <figure class="footer__logo">
