--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,22 +1,57 @@
 .footer {
   width: 100%;
-
   background-color: $colorSec;
   position: relative;
+  bottom: 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
   box-shadow: rem(0) rem(0) rem(-5) rem(5) rgba(0, 0, 0, 0.205);
   margin-top: rem(30);
+  @include tablet {
+    height: rem(100);
+    margin-top: rem(15);
+    grid-template-columns: 5fr 1fr;
+    align-self: center;
+  }
 
   &__menu {
-    padding: rem(30);
+    margin: rem(30);
     font-size: rem(10);
     line-height: 1.5;
+    @include tablet {
+      margin: 10px;
+      display: grid;
+      grid-template-columns: repeat(7, 1fr);
+      grid-template-rows: rem(80);
+      align-self: center;
+    }
+
+    &--option {
+      padding: 0 rem(10);
+      border-left: $colorBgMain rem(1) solid;
+      @include tablet {
+        text-align: center;
+        align-self: center;
+      }
+    }
+    &--option1 {
+      padding: 0 rem(10);
+      border-left: $colorBgMain rem(1) solid;
+      @include tablet {
+        text-align: center;
+        border-left: none;
+        align-self: center;
+      }
+    }
   }
   &__logo {
     padding: rem(30);
     justify-self: end;
     align-self: end;
+    @include tablet {
+      padding: rem(10) rem(20) 0 rem(20);
+      align-self: center;
+    }
 
     &--img {
       height: rem(35);
