--- a/src/scss/layout/_mainContent.scss
+++ b/src/scss/layout/_mainContent.scss
@@ -5,6 +5,9 @@
     margin: rem(20) 0 rem(10) 0;
     padding: rem(20) 0;
     background-color: $colorSec;
+    @include tablet {
+      padding: rem(20);
+    }
 
     &--img {
       width: 100%;
@@ -14,10 +17,12 @@
     }
   }
   &__articles {
+    width: 100%;
     display: flex;
     flex-direction: column;
     @include tablet {
       flex-direction: row;
+      justify-content: space-between;
     }
   }
   &__article {
@@ -25,6 +30,10 @@
     margin: rem(10) rem(20);
     padding: rem(20);
     box-shadow: rem(0) rem(3) rem(5) rem(3) rgba(0, 0, 0, 0.205);
+    @include tablet {
+      margin: rem(10) rem(0);
+      max-width: 31.5%;
+    }
     &--img {
       width: 100%;
     }
