--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -2,7 +2,7 @@
   width: 100%;
   background-color: $colorSec;
   position: relative;
-  bottom: 0;
+  //   bottom: 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
   box-shadow: rem(0) rem(0) rem(-5) rem(5) rgba(0, 0, 0, 0.205);
@@ -55,8 +55,11 @@
     justify-self: end;
     align-self: end;
     @include tablet {
-      padding: rem(10) rem(20) 0 rem(20);
+      padding: rem(10) rem(20) 0;
       align-self: center;
+    }
+    @include desktop {
+      padding: rem(10) rem(50) 0 rem(20);
     }
 
     &--img {
