--- a/src/scss/layout/_mainContent.scss
+++ b/src/scss/layout/_mainContent.scss
@@ -34,6 +34,10 @@
     margin: rem(10) rem(20);
     padding: rem(20);
     box-shadow: rem(0) rem(3) rem(5) rem(3) rgba(0, 0, 0, 0.205);
+    &:hover {
+      transform: scale(1.03);
+      background-color: rgba(255, 255, 255, 0.164);
+    }
     @include tablet {
       margin: rem(10) rem(0);
       max-width: 31.5%;
@@ -53,6 +57,9 @@
     &--text {
       padding-top: rem(10);
       font-size: rem(14);
+      @include desktop {
+        font-size: rem(16);
+      }
     }
   }
 }
